--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body onload="init()">
   <div class="content">
     <div class="head">
-      <h3>학점계산기</h3>
-      <p>수강 학점을 소수점 단위로 입력할 수 있는 계산기입니다.</p>
+      <h1>학점계산기</h1>
+      <h4>수강 학점을 소수점 단위로 입력할 수 있는 계산기입니다.</h4>
       <hr>
     </div>
     <div class="mainInput" onload="mainPage()">
