--- a/step1.html
+++ b/step1.html
@@ -6,19 +6,16 @@
   <script src="script.js"></script>
   <title>학점계산기</title>
 </head>
-<body onload="init()">
+<body>
   <div class="content">
     <div class="head">
-      <h1>학점계산기</h1>
+      <h3>학점계산기</h3>
       <p>학점과 성적을 숫자로 입력해주세요.</p>
-      
+      <hr>
     </div>
-    <hr>
     <div id="scoreInput"></div>
-    <hr class="sep">
     <button type="submit" id="valueBtn" onclick="calculate()">계산하기</button>
     <div id="averageScore"></div>
-    <hr class="sep">
     <button class="nextBtn" onclick="window.location.href='index.html'">처음으로</button>
   </div>
 </body>
